# nemo_guardrails_demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mcp_config.json  pyproject.toml  run.sh  start.sh  test_gemini.py
app/: __init__.py  main.py  mcp_server.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js
config/: __init__.py  actions.py  config.yml  prompts.yml  rails.co
tests/: test_guardrails.py
